# with-docs

./: .flake8  control.ipynb  generate_toml.py
.github/workflows/: python-test.yaml
templates/: pyproject.toml
